updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hi! My name is Samya. I graduated from Long Island University-Brooklyn with a Physics and Health Science background. I am currently working part time during the pandemic and I am thrilled to be here. With projections expected to rise in the next 10 years due to an increase in demand and efforts towards future technologies for web developers, I am excited to be a part of this journey. </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>New York, NY</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My hobbies include yoga, salsa, reading science or health based research articles regarding new discoveries, traveling, trying new things and cuisines, learning new skills I am very interested in and mastering them.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to be an application developer so here I am speaking it into existence but ultimately the sky is the limit. I would love to dabble in a little bit of everything as I feel that every part is equally important. You need its entirety to master such skills when put in conjunction with one another.p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Brooklyn, New York</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I would love to be a web developer because while doing my bachelors in Physics, I was introduced to the coding world and grew to love it. Everything from how it works and what it is capable of creating which is exciting. After graduating, my desire to learn more and strengthen those skills did not dissipate but otherwise I felt an inclination and almost like an eagerness to learn all I could and more because now my heart was set on it. “I have to know this! I have to dive into this!”</p>
     </section>
 
     <footer id="footer">
